[Tarea-7] Modificar test para convertirlos en pruebas unitarias puras con JUnit y mockito, sin levantar el contexto de Spring Boot